--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-08-11  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/ScriptingContext.cs
+	(ScriptingContext.Print): Don't call String.Format() on already
+	formatted strings; this'll cause problems if the string contains
+	any '{' or '}'s.
+
+2003-08-11  Martin Baulig  <martin@ximian.com>
+
 	* backends/IInferior.cs (IInferior.CallMethod): This method now
 	takes two `long' arguments.
 
