--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+December 9th, 2003 - Martin Baulig
+----------------------------------
+
+Released version 0.5 "Clemson" of the Mono Debugger :-)
+
+After a very long time, I'm working on the debugger again.  This is
+more or less a snapshot release and it comes without any GUI.
+
 September 8th, 2003 - Martin Baulig
 -----------------------------------
 
