2004-01-15  Martin Baulig  <martin@ximian.com>
	* interfaces/ITargetFunctionType.cs (Source): New property.

svn path=/trunk/debugger/; revision=22097

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-15  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ITargetFunctionType.cs (Source): New property.
+
+2004-01-15  Martin Baulig  <martin@ximian.com>
+
 	* backends/mono-csharp/MonoCSharpLanguageBackend: Renamed
 	`MonoSymbolTableReader' to `MonoSymbolfile'.
 
