--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-16  Martin Baulig  <martin@ximian.com>
 
+	* arch/Bfd.cs: Merged with BfdModule.
+
+	* arch/BfdModule.cs: Removed.
+
+2004-01-16  Martin Baulig  <martin@ximian.com>
+
 	* classes/Module.cs: Made this class abstract and merge it with
 	ModuleData; modules can't be "unloaded" anymore.
 
