--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-02  Martin Baulig  <martin@ximian.com>
+
+	* classes/SimpleBreakpoint.cs: Added simpler .ctor.
+
 2004-01-23  Jackson Harper <jackson@ximian.com>
 
 	* configure.in: Add missing files
