--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-03-04  Martin Baulig  <martin@ximian.com>
+
+	* backends/Debugger.cs (DebuggerBackend.Initialize): Renamed this
+	to DoInitialize() and added a static Initialize().
+
+	* backends/SingleSteppingEngine.cs (Kill): New public method.
+
+	* backends/server/i386-linux-ptrace.c: Protect do_wait() by a mutex.
+	(_mono_debugger_server_setup_inferior): Wait until the target
+	actually stopped.
+
 2004-03-03  Martin Baulig  <martin@ximian.com>
 
 	* backend/server/i386-ptrace.c (mono_debugger_server_initialize):
