--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-03-04  Martin Baulig  <martin@ximian.com>
 
+	* classes/Breakpoint.cs (BreakpointEventHandler): Added additional
+	StackFrame argument.
+
+2004-03-04  Martin Baulig  <martin@ximian.com>
+
 	* backends/Debugger.cs (DebuggerBackend.Initialize): Renamed this
 	to DoInitialize() and added a static Initialize().
 
