--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-03-04  Martin Baulig  <martin@ximian.com>
 
+	* backends/server/i386-linux-ptrace.c
+	(mono_debugger_server_stop_and_wait): Make this work reliably; if
+	mono_debugger_server_global_wait() is running while we're being
+	called, "steal" its return value and return it here.
+
+2004-03-04  Martin Baulig  <martin@ximian.com>
+
 	* backends/SingleSteppingEngine.cs (SendSyncCommand): Allow sync
 	commands to be run from the background thread, ie. inside an event
 	handler.
