--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-03-04  Martin Baulig  <martin@ximian.com>
 
+	* classes/Backtrace.cs (Length): Return 0 if we don't have any
+	frame.
+
+	* classes/SourceAddress.cs (ToString): Return "filename:linenum".	
+
+2004-03-04  Martin Baulig  <martin@ximian.com>
+
 	* backends/server/i386-linux-ptrace.c
 	(mono_debugger_server_stop_and_wait): Make this work reliably; if
 	mono_debugger_server_global_wait() is running while we're being
