--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-04-09  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Added private configure option and an automake
+	conditional to enable some hacking features - just for me at the
+	moment ...
+
 2004-03-16  Martin Baulig  <martin@ximian.com>
 
 	Released version 0.6 "Atlanta" of the Mono Debugger :-)
